--- a/.jestconfig.json
+++ b/.jestconfig.json
@@ -6,5 +6,9 @@
     "!**/dist/**"
   ],
   "coverageDirectory": "coverage",
-  "coverageReporters": ["json", "lcov", "text"]
+  "coverageReporters": ["json", "lcov", "text"],
+  "testPathIgnorePatterns": [
+    "/node_modules/",
+    "dist"
+  ]
 }
