--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.2",
     "express": "^4.16.3",
     "winston": "^3.0.0",
     "xml2js": "^0.4.19"
