--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "engineStrict": true,
   "scripts": {
     "start": "node src/index.js",
-    "gulp": "gulp4",
+    "gulp": "node node_modules/.bin/gulp4",
     "serve": "cd dist && forever --minUptime=1000 --spinSleepTime=1000 -w index.js",
     "test": "TESTING=true jest --watch --config=.jestconfig.json"
   },
@@ -18,23 +18,32 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.4.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^5.4.0",
     "forever": "^0.15.3",
     "gulp-babel": "^8.0.0",
+    "gulp-better-rollup": "^3.3.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp4": "^4.0.2",
     "jest": "^23.5.0",
     "regenerator-runtime": "^0.12.1",
-    "supertest": "^3.1.0"
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "supertest": "^3.1.0",
+    "winston": "^3.0.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "express": "^4.16.3",
-    "winston": "^3.0.0",
+    "nunjucks": "^3.1.3",
     "xml2js": "^0.4.19"
   }
 }
